# KindGen

./: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test.py
.streamlit/: config.toml
assets/: __init__.py
data/info/: Kind Gen - Coaching Data Flow in Stages.docx  Kind Gen Coaching Data Template.xlsx
interface/: main.py  methods.py
kindgen/: __init__.py  gpt.py  main.py
kindgen/models/: __init__.py  chat_models.py  stage_model.py
kindgen/principles/: __init__.py  background.txt  principle1.txt  principle2.txt  principle3.txt  principle4.txt  principle5.txt  principle6.txt  principle7.txt  principle8.txt  principle9.txt
kindgen/stages/: __init__.py
kindgen/stages/stage_1/: __init__.py  main.py
kindgen/stages/stage_1/prompts/: __init__.py  substage_1.py
kindgen/stages/stage_2/: __init__.py
kindgen/stages/stage_3/: __init__.py  main.py
kindgen/stages/stage_3/prompts/: substage_1.py  substage_2.py
kindgen/stages/stage_4/: __init__.py
kindgen/stages/stage_5/: __init__.py
kindgen/stages/stage_6/: __init__.py
kindgen/utils/: format.py
prompts/: __init__.py  communication_style_prompt.py  export_session.py  main_prompt.py
tests/: test_cohere_client.py
